--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -12,7 +12,7 @@ replicaCount: 1
 
 image:
   registry: gitlab.udevs.io:5050
-  repository: /ucode/ucode_go_admin_api_gateway
+  repository: /wayll/ucode_go_admin_api_gateway
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "test"
@@ -35,52 +35,47 @@ serviceAccount:
 
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
-  vault.hashicorp.com/auth-path: "auth/kubernetes-ucode-hzn"
-  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/ucode-test/go-admin-api-gateway"
+  vault.hashicorp.com/auth-path: "auth/kubernetes-wayll"
+  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/wayll-test/go-admin-api-gateway"
   vault.hashicorp.com/secret-volume-path-.env: "/app"
-  vault.hashicorp.com/role: "ucode-test"
+  vault.hashicorp.com/role: "wayll-test"
   vault.hashicorp.com/agent-inject-template-.env: |
-    {{- with secret "secret/data/k8s/ucode-test/redis" -}}
+    {{- with secret "secret/data/k8s/wayll-test/redis" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/minio" -}}
+    {{- with secret "secret/data/k8s/wayll-test/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/services" -}}
+    {{- with secret "secret/data/k8s/wayll-test/services" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/postgres" -}}
+    {{- with secret "secret/data/k8s/wayll-test/postgres" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/gitlab" -}}
+    {{- with secret "secret/data/k8s/wayll-test/gitlab" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/go-admin-api-gateway" -}}
+    {{- with secret "secret/data/k8s/wayll-test/go-admin-api-gateway" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/minio" -}}
+    {{- with secret "secret/data/k8s/wayll-test/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/openfaas" -}}
-    {{- range $key, $value := .Data.data }}
-    {{ $key }}: {{ $value }}
-    {{- end }}
-    {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-test/jaeger" -}}
+    {{- with secret "secret/data/k8s/wayll-test/openfaas" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
@@ -108,33 +103,33 @@ vault:
     VAULT_TOKEN: vault_token
     SECRETS_PATH: vault_path
 
-environment:
-  KUBECONFIG: /kubeconfig/config
-  GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-volumes:
-  enabled: true
-  hostpath:
-    enabled: true
-    name: code-server
-    path: /functions
-    mountPath: /functions
-    type: Directory
-  pvc:
-    enabled: false
-    existing_claim:
-    name: pvc
-    mountPath: /functions
-    size: 1G
-    class:
-    accessModes:
-      - ReadWriteMany
-  configMaps:
-    - name: code-server-kubeconfig
-      mountPath: /kubeconfig
-  secrets:
-    - name: ssh-key-secret
-      mountPath: /key
-      defaultMode: 256
+# environment:
+#   KUBECONFIG: /kubeconfig/config
+#   GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+# volumes:
+#   enabled: true
+#   hostpath:
+#     enabled: true
+#     name: code-server
+#     path: /functions
+#     mountPath: /functions
+#     type: Directory
+#   pvc:
+#     enabled: false
+#     existing_claim:
+#     name: pvc
+#     mountPath: /functions
+#     size: 1G
+#     class:
+#     accessModes:
+#       - ReadWriteMany
+#   configMaps:
+#     - name: code-server-kubeconfig
+#       mountPath: /kubeconfig
+#   secrets:
+#     - name: ssh-key-secret
+#       mountPath: /key
+#       defaultMode: 256
 
 service:
   type: ClusterIP
@@ -154,7 +149,7 @@ ingress:
         kubernetes.io/ingress.class: nginx
       type: web
       hosts:
-        - host: "admin-api.ucode.run"
+        - host: "test-api-admin.app-wayll.uz"
           path: /
           servicePort: 8080
       # tls:
@@ -174,7 +169,7 @@ ingress:
         kubernetes.io/ingress.class: nginx
       type: auth
       hosts:
-        - host: "admin-api.ucode.run"
+        - host: "test-api-admin.app-wayll"
           path: /swagger
           servicePort: 8080
       # tls:
@@ -206,7 +201,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/code-server
+            - key: workload
               operator: In
               values:
-                - "true"
+                - "wayll-test"
