--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,37 @@ include:
   - .gitlab/ci/*.gitlab-ci.yml
 
 stages:
+  # - test
   - build
   - deploy
   - rollback
+
+# test-staging:
+#   image: golang:1.22
+#   stage: test
+#   script:
+#   - go mod tidy && go mod vendor
+#   - go test ./tests/...
+#   only:
+#     - staging 
+  
+# test-prod:
+#   image: golang:1.22
+#   stage: test
+#   script:
+#   - go mod tidy && go mod vendor
+#   - go test ./tests/...
+#   only:
+#     - master 
+
+build-dev:
+  stage: build
+  extends: .build_template
+  variables:
+    ENV_TAG: dev
+    DOCKERFILE: Dockerfile
+  only:
+    - dev
 
 build-staging:
   stage: build
@@ -28,19 +56,29 @@ deploy-staging:
   stage: deploy
   extends: .deploy_template
   variables:
-    NAMESPACE: wayll-test
+    NAMESPACE: ucode-test
     VALUES_FILE: .helm/values-test.yml
-    K8SCONFIGJSON: $WAYLL_KUBECONFIG
+    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
   only:
     - staging
+
+deploy-dev: 
+  stage: deploy
+  extends: .deploy_template
+  variables:
+    NAMESPACE: ucode-dev
+    VALUES_FILE: .helm/values-dev.yml
+    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
+  only: 
+    - dev
 
 deploy-prod:
   stage: deploy
   extends: .deploy_template
   variables:
-    NAMESPACE: wayll-prod
+    NAMESPACE: ucode-prod
     VALUES_FILE: .helm/values-prod.yml
-    K8SCONFIGJSON: $WAYLL_KUBECONFIG
+    K8SCONFIGJSON: $UCODE_KUBECONFIG
   only:
     - master
 
@@ -48,8 +86,17 @@ rollback-staging:
   stage: rollback
   extends: .rollback_template
   variables:
-    NAMESPACE: wayll-test
-    K8SCONFIGJSON: $WAYLL_KUBECONFIG
+    NAMESPACE: ucode-test
+    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
+  when: manual
+
+
+rollback-dev:
+  stage: rollback
+  extends: .rollback_template
+  variables:
+    NAMESPACE: ucode-dev
+    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
   when: manual
 
 
@@ -57,7 +104,7 @@ rollback-prod:
   stage: rollback
   extends: .rollback_template
   variables:
-    NAMESPACE: wayll-prod
-    K8SCONFIGJSON: $WAYLL_KUBECONFIG
+    NAMESPACE: ucode-prod
+    K8SCONFIGJSON: $UCODE_KUBECONFIG
   when: manual
 #
