--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -2,20 +2,20 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 global:
-  replicaCount: 2
+  replicaCount: 1
   environment: {}
   # list of key: value
   # GLOBAL1: value
 labels:
   app: ucode-go-admin-api-gateway
-replicaCount: 2
+replicaCount: 1
 
 image:
   registry: gitlab.udevs.io:5050
   repository: /ucode/ucode_go_admin_api_gateway
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "dev"
 
 imagePullSecrets: "gitlab-registry"
 nameOverride: ""
@@ -35,47 +35,37 @@ serviceAccount:
 
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
-  vault.hashicorp.com/auth-path: "auth/kubernetes-ucode"
-  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/ucode-prod/go-admin-api-gateway"
+  vault.hashicorp.com/auth-path: "auth/kubernetes-ucode-hzn"
+  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/ucode-dev/go-admin-api-gateway"
   vault.hashicorp.com/secret-volume-path-.env: "/app"
-  vault.hashicorp.com/role: "ucode-prod"
+  vault.hashicorp.com/role: "ucode-dev"
   vault.hashicorp.com/agent-inject-template-.env: |
-    {{- with secret "secret/data/k8s/ucode-prod/redis" -}}
+    {{- with secret "secret/data/k8s/ucode-dev/services" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/minio" -}}
+    {{- with secret "secret/data/k8s/ucode-dev/go-admin-api-gateway" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/services" -}}
+    {{- with secret "secret/data/k8s/ucode-dev/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/postgres" -}}
+    {{- with secret "secret/data/k8s/ucode-dev/gitlab" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/go-admin-api-gateway" -}}
+    {{- with secret "secret/data/k8s/ucode-dev/openfaas" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/gitlab" -}}
-    {{- range $key, $value := .Data.data }}
-    {{ $key }}: {{ $value }}
-    {{- end }}
-    {{ end -}}
-    {{- with secret "secret/data/k8s/ucode-prod/jaeger" -}}
-    {{- range $key, $value := .Data.data }}
-    {{ $key }}: {{ $value }}
-    {{- end }}
-    {{ end -}}
-    
+
 podLabels:
   app: ucode-go-admin-api-gateway
 
@@ -98,34 +88,33 @@ vault:
     VAULT_TOKEN: vault_token
     SECRETS_PATH: vault_path
 
-# environment:
-#   KUBECONFIG: /kubeconfig/config
-#   GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-# volumes:
-#   enabled: true
-#   hostpath:
-#     enabled: true
-#     name: code-server
-#     path: /functions
-#     mountPath: /functions
-#     type: Directory
-#   pvc:
-#     enabled: false
-#     existing_claim:
-#     name: pvc
-#     mountPath: /functions
-#     size: 1G
-#     class:
-#     accessModes:
-#       - ReadWriteMany
-#   configMaps:
-#     - name: code-server-kubeconfig
-#       mountPath: /kubeconfig
-#   secrets:
-#     - name: ssh-key-secret
-#       mountPath: /key
-#       defaultMode: 256
-
+environment:
+  KUBECONFIG: /kubeconfig/config
+  GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+volumes:
+  enabled: true
+  hostpath:
+    enabled: true
+    name: code-server
+    path: /functions
+    mountPath: /functions
+    type: Directory
+  pvc:
+    enabled: false
+    existing_claim: code-server.code-server
+    name:
+    mountPath: /functions
+    size: 2G
+    class:
+    accessModes:
+      - ReadWriteMany
+  configMaps:
+    - name: code-server-kubeconfig
+      mountPath: /kubeconfig
+  secrets:
+    - name: ssh-key-secret
+      mountPath: /key
+      defaultMode: 256
 
 service:
   type: ClusterIP
@@ -143,12 +132,15 @@ ingress:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
-        # cert-manager.io/cluster-issuer: letsencrypt-prod
       type: web
       hosts:
-        - host: "api.admin.u-code.io"
+        - host: "dev-admin-api.ucode.run"
           path: /
           servicePort: 8080
+      tls:
+        - secretName: ucode-star
+          hosts:
+            - "dev-admin-api.ucode.run"
     - annotations:
         # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
@@ -160,18 +152,23 @@ ingress:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
-        # cert-manager.io/cluster-issuer: letsencrypt-prod
       type: auth
       hosts:
-        - host: "api.admin.u-code.io"
+        - host: "dev-admin-api.ucode.ucode.run"
           path: /swagger
           servicePort: 8080
+      tls:
+        - secretName: ucode-star
+          hosts:
+            - "dev-admin-api.ucode.ucode.run"
 
-resources:
-   limits:
-     ephemeral-storage: 2Gi
-   requests:
-     ephemeral-storage: 1Gi
+# resources:
+#    limits:
+#      cpu: 150m
+#      memory: 256Mi
+#    requests:
+#      cpu: 100m
+#      memory: 200Mi
 
 autoscaling:
   enabled: false
@@ -189,7 +186,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: workload
+            - key: kubernetes.io/ucode-dev
               operator: In
               values:
-                - "ucode-prod"
+                - "true"
