--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -12,7 +12,7 @@ replicaCount: 1
 
 image:
   registry: gitlab.udevs.io:5050
-  repository: /wayll/ucode_go_admin_api_gateway
+  repository: /ucode/ucode_go_admin_api_gateway
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "test"
@@ -35,47 +35,52 @@ serviceAccount:
 
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
-  vault.hashicorp.com/auth-path: "auth/kubernetes-wayll"
-  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/wayll-test/go-admin-api-gateway"
+  vault.hashicorp.com/auth-path: "auth/kubernetes-ucode-hzn"
+  vault.hashicorp.com/agent-inject-secret-.env: "secret/data/k8s/ucode-test/go-admin-api-gateway"
   vault.hashicorp.com/secret-volume-path-.env: "/app"
-  vault.hashicorp.com/role: "wayll-test"
+  vault.hashicorp.com/role: "ucode-test"
   vault.hashicorp.com/agent-inject-template-.env: |
-    {{- with secret "secret/data/k8s/wayll-test/redis" -}}
+    {{- with secret "secret/data/k8s/ucode-test/redis" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/minio" -}}
+    {{- with secret "secret/data/k8s/ucode-test/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/services" -}}
+    {{- with secret "secret/data/k8s/ucode-test/services" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/postgres" -}}
+    {{- with secret "secret/data/k8s/ucode-test/postgres" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/gitlab" -}}
+    {{- with secret "secret/data/k8s/ucode-test/gitlab" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/go-admin-api-gateway" -}}
+    {{- with secret "secret/data/k8s/ucode-test/go-admin-api-gateway" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/minio" -}}
+    {{- with secret "secret/data/k8s/ucode-test/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-    {{- with secret "secret/data/k8s/wayll-test/openfaas" -}}
+    {{- with secret "secret/data/k8s/ucode-test/openfaas" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
+    {{- with secret "secret/data/k8s/ucode-test/jaeger" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
     {{- end }}
@@ -103,33 +108,33 @@ vault:
     VAULT_TOKEN: vault_token
     SECRETS_PATH: vault_path
 
-# environment:
-#   KUBECONFIG: /kubeconfig/config
-#   GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-# volumes:
-#   enabled: true
-#   hostpath:
-#     enabled: true
-#     name: code-server
-#     path: /functions
-#     mountPath: /functions
-#     type: Directory
-#   pvc:
-#     enabled: false
-#     existing_claim:
-#     name: pvc
-#     mountPath: /functions
-#     size: 1G
-#     class:
-#     accessModes:
-#       - ReadWriteMany
-#   configMaps:
-#     - name: code-server-kubeconfig
-#       mountPath: /kubeconfig
-#   secrets:
-#     - name: ssh-key-secret
-#       mountPath: /key
-#       defaultMode: 256
+environment:
+  KUBECONFIG: /kubeconfig/config
+  GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+volumes:
+  enabled: true
+  hostpath:
+    enabled: true
+    name: code-server
+    path: /functions
+    mountPath: /functions
+    type: Directory
+  pvc:
+    enabled: false
+    existing_claim:
+    name: pvc
+    mountPath: /functions
+    size: 1G
+    class:
+    accessModes:
+      - ReadWriteMany
+  configMaps:
+    - name: code-server-kubeconfig
+      mountPath: /kubeconfig
+  secrets:
+    - name: ssh-key-secret
+      mountPath: /key
+      defaultMode: 256
 
 service:
   type: ClusterIP
@@ -149,7 +154,7 @@ ingress:
         kubernetes.io/ingress.class: nginx
       type: web
       hosts:
-        - host: "test-api-admin.app-wayll.uz"
+        - host: "admin-api.ucode.run"
           path: /
           servicePort: 8080
       # tls:
@@ -169,7 +174,7 @@ ingress:
         kubernetes.io/ingress.class: nginx
       type: auth
       hosts:
-        - host: "test-api-admin.app-wayll"
+        - host: "admin-api.ucode.run"
           path: /swagger
           servicePort: 8080
       # tls:
@@ -201,7 +206,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: workload
+            - key: kubernetes.io/code-server
               operator: In
               values:
-                - "wayll-test"
+                - "true"
