--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -175,13 +175,13 @@ ingress:
         - host: "api.admin.u-code.io"
           path: /swagger
           servicePort: 8080
-        - host: "api-client-admin.app-wayll.uz"
-          path: /swagger
-          servicePort: 8080
-      tls:
-        - secretName: api-admin-wayll-swagger-tls
-          hosts: 
-            - "api-client-admin.app-wayll.uz"
+        # - host: "api-client-admin.app-wayll.uz"
+        #   path: /swagger
+        #   servicePort: 8080
+      # tls:
+      #   - secretName: api-admin-wayll-swagger-tls
+      #     hosts: 
+      #       - "api-client-admin.app-wayll.uz"
 
 resources:
    limits:
