removed wayll domain

--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -150,13 +150,13 @@ ingress:
         - host: "api.admin.u-code.io"
           path: /
           servicePort: 8080
-        - host: "api-client-admin.app-wayll.uz"
-          path: /
-          servicePort: 8080
-      tls:
-        - secretName: api-admin-wayll-tls
-          hosts: 
-            - "api-client-admin.app-wayll.uz"
+      #   - host: "api-client-admin.app-wayll.uz"
+      #     path: /
+      #     servicePort: 8080
+      # tls:
+      #   - secretName: api-admin-wayll-tls
+      #     hosts: 
+      #       - "api-client-admin.app-wayll.uz"
     - annotations:
         # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
