--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -152,16 +152,16 @@ ingress:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
-        cert-manager.io/cluster-issuer: letsencrypt-prod
+        #cert-manager.io/cluster-issuer: letsencrypt-prod
       type: web
       hosts:
         - host: "admin-api.ucode.run"
           path: /
           servicePort: 8080
-      tls:
-        - secretName: admin-api-tls
-          hosts:
-            - "admin-api.ucode.run"
+      # tls:
+      #   - secretName: admin-api-tls
+      #     hosts:
+      #       - "admin-api.ucode.run"
     - annotations:
         # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
