--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,110 +1,12 @@
 include:
-  - .gitlab/ci/*.gitlab-ci.yml
+  - project: 'ucode/ops/ci-cd'
+    ref: master
+    file: 'microservices/ci.gitlab-ci.yml'
+
+  - project: 'ucode/ops/ci-cd'
+    ref: master
+    file: 'microservices/cd.gitlab-ci.yml'
 
 stages:
-  # - test
   - build
   - deploy
-  - rollback
-
-# test-staging:
-#   image: golang:1.22
-#   stage: test
-#   script:
-#   - go mod tidy && go mod vendor
-#   - go test ./tests/...
-#   only:
-#     - staging 
-  
-# test-prod:
-#   image: golang:1.22
-#   stage: test
-#   script:
-#   - go mod tidy && go mod vendor
-#   - go test ./tests/...
-#   only:
-#     - master 
-
-build-dev:
-  stage: build
-  extends: .build_template
-  variables:
-    ENV_TAG: dev
-    DOCKERFILE: Dockerfile
-  only:
-    - dev
-
-build-staging:
-  stage: build
-  extends: .build_template
-  variables:
-    DOCKERFILE: Dockerfile
-    ENV_TAG: test
-  only:
-    - staging
-
-build-prod:
-  stage: build
-  extends: .build_template
-  variables:
-    ENV_TAG: latest
-    DOCKERFILE: Dockerfile
-  only:
-    - master
-
-deploy-staging:
-  stage: deploy
-  extends: .deploy_template
-  variables:
-    NAMESPACE: ucode-test
-    VALUES_FILE: .helm/values-test.yml
-    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
-  only:
-    - staging
-
-deploy-dev: 
-  stage: deploy
-  extends: .deploy_template
-  variables:
-    NAMESPACE: ucode-dev
-    VALUES_FILE: .helm/values-dev.yml
-    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
-  only: 
-    - dev
-
-deploy-prod:
-  stage: deploy
-  extends: .deploy_template
-  variables:
-    NAMESPACE: ucode-prod
-    VALUES_FILE: .helm/values-prod.yml
-    K8SCONFIGJSON: $UCODE_KUBECONFIG
-  only:
-    - master
-
-rollback-staging:
-  stage: rollback
-  extends: .rollback_template
-  variables:
-    NAMESPACE: ucode-test
-    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
-  when: manual
-
-
-rollback-dev:
-  stage: rollback
-  extends: .rollback_template
-  variables:
-    NAMESPACE: ucode-dev
-    K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
-  when: manual
-
-
-rollback-prod:
-  stage: rollback
-  extends: .rollback_template
-  variables:
-    NAMESPACE: ucode-prod
-    K8SCONFIGJSON: $UCODE_KUBECONFIG
-  when: manual
-#
